force-app/main/default/objects/SD_PSM__c.object
<CustomObject>
    <fields>
        <fullName>HOX_PSM_Name__c</fullName>
        <label>HOX PSM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSM_Name__c</fullName>
        <label>PSM Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSM_Running_No__c</fullName>
        <label>PSM Running No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_No__c</fullName>
        <label>Running No</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_HOX_Element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HOX Element</label>
        <referenceTo>SD_HOX_Element__c</referenceTo>
        <relationshipLabel>PSM</relationshipLabel>
        <relationshipName>PSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PSM</label>
    <nameField>
        <label>PSM No</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>